--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 </head>
 <body class="bg-gray-100 p-5">
   <h1 class="text-4xl font-bold text-center text-blue-800 bg-gray-100">Our Vacation Hopes!</h1>
+  <div class=" max-w-md mx-auto">
   <div class="flex items-center rounded-lg bg-white shadow-lg overflow-hidden">
     <img class="h-32 flex-shrink-0" src="property.jpg" alt="All our properties">
     <div class="px-3 py-2">
@@ -19,6 +20,7 @@
       </div>
       
     </div>
+  </div>
   </div>
 </body>
 </html>
