--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
   <!-- <script src='main.js'></script> -->
 </head>
 <body class="bg-gray-100 p-5">
-  <h1 class="text-4xl font-bold text-center text-blue-800 bg-gray-100">Our Vacation Hopes!</h1>
-  <div class=" max-w-md mx-auto">
-  <div class="flex items-center rounded-lg bg-white shadow-lg overflow-hidden">
+  <div class=" max-w-md mx-auto bg-gray-100 sm:max-w-xl">
+  <h1 class="text-4xl font-bold text-center text-blue-800">Our Vacation Hopes!</h1>
+  <div class="flex items-center rounded-lg bg-white shadow-lg overflow-hidden sm:mt-8">
     <img class="h-32 flex-shrink-0" src="property.jpg" alt="All our properties">
     <div class="px-3 py-2">
       <h3 class="text-lg font-semibold text-gray-800">Huntington Beach</h3>
