--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100 p-5">
   <div class=" max-w-md mx-auto bg-gray-100 sm:max-w-xl">
-  <h1 class="text-4xl font-bold text-center text-blue-800">Our Vacation Hopes!</h1>
+  <h1 class="text-4xl font-bold text-center text-blue-800">Vacation Hopes!</h1>
   <div class="flex items-center rounded-lg bg-white shadow-lg overflow-hidden sm:mt-8">
     <img class="h-32 flex-shrink-0" src="property.jpg" alt="All our properties">
     <div class="px-3 py-2">
@@ -18,7 +18,6 @@
       <div class="mt-4 bg-">
         <a class="text-gray-200 hover:text-indigo-400 font-semibold text-xs bg-gray-400 px-2 py-2" href="https://unsplash.com/@ralphkayden?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Ralph Kayden"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Photo by Ralph Kayden</span></a>
       </div>
-      
     </div>
   </div>
   </div>
